[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"


[project]
name = "mousebender"
version = "2022.0.0"
authors = [
    { name = "Brett Cannon", email = "brett@python.org" },
    { name = "Derek Keeler", email = "derek@suchcool.ca" },
]
readme = "README.rst"
requires-python = ">=3.6"
license = { file = "LICENSE" }
keywords = ["packaging", "PEP 503", "PEP 592"]
urls.homepage = "https://github.com/brettcannon/mousebender"
urls.repository = "https://github.com/brettcannon/mousebender"
urls.issues = "https://github.com/brettcannon/mousebender/issues"
urls.documentation = "https://github.com/brettcannon/mousebender/blob/master/README.rst"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: BSD License",
]
dynamic = ["description"]

dependencies = ["packaging >= 20.9", "typing-extensions"]

[project.optional-dependencies]

test = [
    "pytest >= 6.0.1",
    "importlib-resources >= 1.4.0",
    "coverage[toml] >= 5.0.4",
    "pytest-cov >= 2.8.1",
]

doc = ["sphinx", "furo", "tomli; python_version < '3.11'"]

[tool.coverage]
run.source = ["mousebender/"]
run.branch = true
report.fail_under = 100

[tool.isort]
profile = "black"

[tool.ruff]
select = ["E", "F", "W", "D", "C", "B", "A", "ANN", "RUF", "M", "I"]
ignore = ["E501", "D203", "D213", "ANN101"]
per-file-ignores = { "tests/*" = ["D", "ANN"], "noxfile.py" = ["ANN", "A001"] }
